2008-06-15  Darin Adler  <darin@apple.com>

        * Scripts/do-webcore-rename: Updated for the latest round of renaming.

2008-06-15  Darin Adler  <darin@apple.com>

        * Scripts/do-webcore-rename: Updated for the latest round of renaming.

2008-06-15  Darin Adler  <darin@apple.com>

        * Scripts/do-webcore-rename: Updated for the latest round of renaming.

2008-06-15  Darin Adler  <darin@apple.com>

        * Scripts/do-webcore-rename: Updated for the latest round of renaming.

2008-06-15  Darin Adler  <darin@apple.com>

        * Scripts/do-file-rename: Updated.
        * Scripts/do-webcore-rename: Updated for the latest round of renaming.

2008-06-15  Darin Adler  <darin@apple.com>

        * Scripts/do-file-rename: Updated for the latest round of renaming.
        * Scripts/do-webcore-rename: Tweaked and reorganized a bit.

2008-06-15  Darin Adler  <darin@apple.com>

        * Scripts/create-exports: Added.
        * Scripts/do-file-rename: Added some planned renames.
        * Scripts/do-webcore-rename: Updated for the latest round of renaming.

2008-06-15  Darin Adler  <darin@apple.com>

        * Scripts/do-webcore-rename: Updated for the latest round of renaming.

2008-06-15  Maciej Stachowiak  <mjs@apple.com>

        Reviewed by Oliver.
        
        - rename testkjs to jsc

        * Scripts/build-jsc: Copied from Scripts/build-testkjs.
        * Scripts/build-testkjs: Removed.
        * Scripts/run-javascriptcore-tests:
        * Scripts/run-jsc: Copied from Scripts/run-testkjs.
        * Scripts/run-sunspider:
        * Scripts/run-testkjs: Removed.
        * Scripts/sunspider-compare-results:

2008-06-14  Darin Adler  <darin@apple.com>

        * Scripts/do-webcore-rename: Moved planned renames into a separate hash
        from the actual renames. Removed many renames that are either done or
        no longer planned.

2008-06-14  Darin Adler  <darin@apple.com>

        * Scripts/do-webcore-rename: Fixed obvious typo.
